[package]
name = "floodplain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
parse-display = "0.5.3"
prost = "0.8.0"
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"
